--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <button id="next-btn">Next</button>
   </div>
 
-  <script src="script.js"></script>
+  <script src="scripts.js"></script>
 </body>
 </html>
+
